Actions
Bug #8716
closedlibrpcsoc: variable set but not used
Start date:
2017-10-13
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Debug build error from gcc 6:
../clnt_tcp.c:122:6: error: variable 'i' set but not used [-Werror=unused-but-set-variable] int i; ^ cc1: all warnings being treated as errors
Updated by Electric Monk almost 5 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 3c6b90be1d51de874ba4c1f05537c85375b6ab6e
commit 3c6b90be1d51de874ba4c1f05537c85375b6ab6e Author: Toomas Soome <tsoome@me.com> Date: 2017-10-16T13:35:22.000Z 8716 librpcsoc: variable set but not used Reviewed by: C Fraire <cfraire@me.com> Reviewed by: Igor Kozhukhov <igor@dilos.org> Reviewed by: Robert Mustacchi <rm@joyent.com> Approved by: Richard Lowe <richlowe@richlowe.net>
Actions