8716 librpcsoc: variable set but not used Reviewed by: C Fraire <cfraire@me.com> Reviewed by: Igor Kozhukhov <igor@dilos.org> Reviewed by: Robert Mustacchi <rm@joyent.com> Approved by: Richard Lowe <richlowe@richlowe.net>