usr/src/ucblib/librpcsoc/clnt_tcp.c
@@ -119,7 +119,6 @@ clnttcp_create(raddr, prog, vers, sockp, sendsz, recvsz)
 	register struct ct_data *ct;
 	struct timeval now;
 	struct rpc_msg call_msg;
-	int i;
 
 	h  = (CLIENT *)mem_alloc(sizeof (*h));
 	if (h == NULL) {
@@ -155,7 +154,7 @@ clnttcp_create(raddr, prog, vers, sockp, sendsz, recvsz)
 	 */
 	if (*sockp < 0) {
 		*sockp = _socket(AF_INET, SOCK_STREAM, IPPROTO_TCP);
-		i = bindresvport(*sockp, (struct sockaddr_in *)0);
+		(void) bindresvport(*sockp, (struct sockaddr_in *)0);
 		if ((*sockp < 0)||
 			(connect(*sockp, (struct sockaddr *)raddr,
 			sizeof (*raddr)) < 0)) {
